syntax = "proto3";

option java_multiple_files = true;
option java_package = "sr.middleware.proto";
option java_outer_classname = "bankService";

enum Currency {
    PLN = 0;
    EUR = 1;
    USD = 2;
    GBP = 3;
    CHR = 4;
}

message ExchangeRate {
    Currency currency = 1;
    double buy = 2;
    double sell = 3;
}

message ExchangeRateCollection {
    repeated ExchangeRate exchangeRate = 1;
}

message CurrencyCollection {
    repeated Currency currency = 1;
}

service ExchangeRateService {
    rpc GetExchangeRateStream(CurrencyCollection) returns (stream ExchangeRateCollection) {}
}